# ai_cmaker_project

./: .env.example  docker-compose.yml
ai_cmaker/: .gitignore  Dockerfile  alembic.ini  arq_jobs.py  config.yml  pyproject.toml  pyrightconfig.json  video_script_generator.py
ai_cmaker/aiogram_docs/: buttons.txt  filters_middlewares.txt  fsm.txt  intro.txt  messages.txt
ai_cmaker/bot/: constants.py  init.py  main.py  schemas.py  states.py
ai_cmaker/bot/api/: user.py
ai_cmaker/bot/handlers/: avatar.py  back.py  editing.py  payment.py  profile.py  script.py  start.py  testing.py
ai_cmaker/bot/keyboards/: keyboards.py
ai_cmaker/bot/utils/: gif_to_mp4.py  loading.py  md_escaper.py  merge.py  utils.py
ai_cmaker/scripts/: start.sh
ai_cmaker/services/: aiml.py  heygen.py  openai.py  s3.py  zapcap.py
ai_cmaker_webhook/: Dockerfile  pyproject.toml
ai_cmaker_webhook/freedompay/: experiments.py  freedompay_kg.py  jws_freedompay.py
ai_cmaker_webhook/scripts/: start.sh
ai_cmaker_webhook/src/: exceptions.py  main.py  models.py  schemas.py  utils.py
ai_cmaker_webhook/src/alembic/: env.py
ai_cmaker_webhook/src/api/: dependencies.py  main.py  payment.py  user.py  webhook.py
ai_cmaker_webhook/src/core/: config.py  db.py
ai_cmaker_webhook/src/repositories/: transaction.py  user.py
ai_cmaker_webhook/src/services/: transaction.py  user.py
